--- a/.serverless/requirements.txt
+++ b/.serverless/requirements.txt
@@ -1,19 +1,29 @@
 PyYAML~=6.0
+SQLAlchemy~=1.4.36
 anyio~=3.5.0
 asgiref~=3.5.0
+certifi~=2021.10.8
 click~=8.1.2
+cryptography==37.0.2
+ecdsa~=0.17.0
 fastapi~=0.75.2
 h11~=0.13.0
 httptools~=0.4.0
+idna~=3.3
 jose~=1.0.0
 mangum~=0.15.0
+pyasn1~=0.4.8
+pycparser~=2.21
 pydantic~=1.9.0
 python-dotenv
 python-jose[cryptography]
 python-multipart~=0.0.5
 requests~=2.27.1
+rsa~=4.8
+six~=1.16.0
 sniffio~=1.2.0
 starlette~=0.17.1
+urllib3~=1.26.9
 uvicorn~=0.17.6
 uvloop~=0.16.0
 watchgod~=0.8.2
