--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,14 @@ click~=8.1.2
 PyYAML~=6.0
 httptools~=0.4.0
 watchgod~=0.8.2
+
+rsa~=4.8
+pyasn1~=0.4.8
+ecdsa~=0.17.0
+cryptography==37.0.2
+six~=1.16.0
+certifi~=2021.10.8
+idna~=3.3
+urllib3~=1.26.9
+pycparser~=2.21
+SQLAlchemy~=1.4.36
